Give icons white background and place the license block in a Bootstrap well for improved icon visibility. Fix license name link wiehgt in the license description well under license choosers.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,3 +91,7 @@ tr {
 .license-desc-selected-not {
     color: lightsteelblue;
 }
+
+.license-desc-selected-not > a {
+    color: lightsteelblue;
+}
